# readyGLsetup

./: CMakeLists.txt  README.md
dependencies/glad/: glad.h
shaders/: shader.frag  shader.vert
src/: Camera.cpp  Camera.h  Texture.cpp  VAO.cpp  VAO.h  glad.c  main.cpp  shaderClass.cpp  shaderClass.h
